resources/policy/constraints/k8spspallowprivilegeescalationcontainer.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Controls restricting escalation to root privileges. Corresponds to
      the `allowPrivilegeEscalation` field in a PodSecurityPolicy. For more information,
      see https://kubernetes.io/docs/concepts/policy/pod-security-policy/#privilege-escalation
    metadata.gatekeeper.sh/title: Allow Privilege Escalation in Container
  labels:
    app.kubernetes.io/managed-by: deployments.plural.sh
  name: k8spspallowprivilegeescalationcontainer
spec:
  crd:
    spec:
      names:
        kind: K8sPSPAllowPrivilegeEscalationContainer
      validation:
        legacySchema: false
        openAPIV3Schema:
          description: Controls restricting escalation to root privileges. Corresponds
            to the `allowPrivilegeEscalation` field in a PodSecurityPolicy. For more
            information, see https://kubernetes.io/docs/concepts/policy/pod-security-policy/#privilege-escalation
          properties:
            exemptImages:
              description: |-
                Any container that uses an image that matches an entry in this list will be excluded from enforcement. Prefix-matching can be signified with `*`. For example: `my-image-*`.
                It is recommended that users use the fully-qualified Docker image name (e.g. start with a domain name) in order to avoid unexpectedly exempting images from an untrusted repository.
              items:
                type: string
              type: array
          type: object
  targets:
  - libs:
    - |
      package lib.exclude_update

      is_update(review) {
          review.operation == "UPDATE"
      }
    - |
      package lib.exempt_container

      is_exempt(container) {
          exempt_images := object.get(object.get(input, "parameters", {}), "exemptImages", [])
          img := container.image
          exemption := exempt_images[_]
          _matches_exemption(img, exemption)
      }

      _matches_exemption(img, exemption) {
          not endswith(exemption, "*")
          exemption == img
      }

      _matches_exemption(img, exemption) {
          endswith(exemption, "*")
          prefix := trim_suffix(exemption, "*")
          startswith(img, prefix)
      }
    rego: |
      package k8spspallowprivilegeescalationcontainer

      import data.lib.exclude_update.is_update
      import data.lib.exempt_container.is_exempt

      violation[{"msg": msg, "details": {}}] {
          # spec.containers.securityContext.allowPrivilegeEscalation field is immutable.
          not is_update(input.review)

          c := input_containers[_]
          not is_exempt(c)
          input_allow_privilege_escalation(c)
          msg := sprintf("Privilege escalation container is not allowed: %v", [c.name])
      }

      input_allow_privilege_escalation(c) {
          not has_field(c, "securityContext")
      }
      input_allow_privilege_escalation(c) {
          not c.securityContext.allowPrivilegeEscalation == false
      }
      input_containers[c] {
          c := input.review.object.spec.containers[_]
      }
      input_containers[c] {
          c := input.review.object.spec.initContainers[_]
      }
      input_containers[c] {
          c := input.review.object.spec.ephemeralContainers[_]
      }
      # has_field returns whether an object has a field
      has_field(object, field) = true {
          object[field]
      }
    target: admission.k8s.gatekeeper.sh
